[package]
name = "oidbs"
authors = ["JoinBase(joinbase.io) team and all contributors"]
version = "1.0.0"
edition = "2021"

[dependencies]
clap = { version = "3.1.0", features = ["derive"] }
url = "2.2"
chrono = { version = "0.4.19", features = ["serde"] }
log = { version = "0.4", features = ["std", "release_max_level_info"] }
env_logger = "0.9.0"
bytes = "1.0"
mqttbytes = "0.6"
thiserror = "1.0.21"
rand = { version = "0.8.4", features = ["small_rng"] }
serde_json = "1.0"
serde_derive = "1.0.130"
serde = "1.0.130"
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7.5"
postgres = { version = "0.19.2", features = ["with-chrono-0_4"] }
futures = "0.3.17"
walkdir = "2"
csv = "1.1"
urlencoding = "2.1.0"
itertools = "0.10"
comfy-table = "5.0"
libpq = "3.0.0"
clickhouse-rs = { git = "https://github.com/suharev7/clickhouse-rs.git", rev = "eff0c76" }
futures-util = "0.3.21"

[[bin]]
name = "oidbs"

[[bin]]
name = "bench_ch"
path = "src/bench_ch.rs"

[profile.release]
opt-level = 3
codegen-units = 1
incremental = false
strip = true
